--- a/public/contact.html
+++ b/public/contact.html
@@ -3,8 +3,8 @@
 <p>Email: taurusvenky@gmail.com</p>
 <p>Address:</p>
 <p>
-  Nethaji Nagar<br />
-  Nandiambakkam, Chennai<br />
-  Tamil Nadu, India - 600120 <br />
+  Thendral Nagar<br />
+  Sithalapakkam, Chennai<br />
+  Tamil Nadu, India - 600126 <br />
 </p>
 <a href="../index.html"> Back to Home page</a>
